writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/decl_params_with_same_name.c
 
int foo(int a, int a);

int main(void) {
    return foo(1, 2);
}

int foo(int a, int b) {
    return a + b;
}